# ultra-hdr-ai-pipeline

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  RESEARCH_INTEGRATION.md  pyproject.toml  pytest.ini  test_hdr_validation.py  tone.py
.github/workflows/: test-automation.yml
docs/: GMNET_PIVOT.md  PRD_NEXT_PHASE.md
hdr/: cli.py  gainmap_pipeline.py  models.py  pipeline.py
hdr/exporters/: direct_ultrahdr.py  libultrahdr_wrapper.py
hdr/swift/: GainMapExporter.swift  GainMapExtract.swift  GainMapInspector.swift
hdr_web/: __init__.py  app.py
hdr_web/templates/: base.html  result.html  upload.html
hdr_web/utils/: __init__.py  preview.py
images/: 5D2AF0A6-9912-4CFA-B4EF-1A05489FE557.heic  README.md
samples/: README.md
tests/: __init__.py  conftest.py  hdr_metadata_utils.py  test_exporter_cli.py  test_gain_map_analysis.py  test_models.py  test_pipeline.py  test_pipeline_e2e.py  test_real_world_integration.py  test_visual_validation.py  test_web_browser.py  test_web_e2e.py  test_web_simple.py
tests/fixtures/input/: invalid_file.txt
tests/golden_masters/: gain_map_baseline.npy
