[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "hdr-pipeline"
version = "0.1.0"
description = "Ultra HDR gain-map pipeline for JPEG_R and HEIC export"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "David Rose", email = "" }]
license = { text = "BSD-3-Clause" }
keywords = ["HDR", "gain-map", "JPEG_R", "HEIC", "Ultra-HDR", "ISO-21496-1"]

dependencies = [
  "numpy>=1.22",
  "Pillow>=9.0",
  "imageio>=2.25",
  "tifffile>=2023.7.10",
  # Optional TensorFlow for model inference (Apple Silicon optimized)
  "tensorflow-macos>=2.13; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "tensorflow-metal>=1.1; platform_system == 'Darwin' and platform_machine == 'arm64'",
  # Other platforms: standard TensorFlow
  "tensorflow>=2.12; platform_system != 'Darwin' or platform_machine != 'arm64'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "requests>=2.31",  # for testing
]
exr = [
  "OpenEXR>=1.3.9",
]
web = [
  "streamlit>=1.33",
  "playwright>=1.46",
]

[project.scripts]
hdr-process = "hdr.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["hdr"]

[tool.uv]
# Use project-local virtualenv and manage Python automatically.
package = true
python-preference = "managed"
